Adds nulls and switch patterns